--- a/src/app/pages/calendario/index/index.component.html
+++ b/src/app/pages/calendario/index/index.component.html
@@ -16,8 +16,8 @@
   </div>
 </div>
 
-<div class="modal" id="dateModal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
+<div class="modal fade" id="dateModal" tabindex="-1" role="dialog" data-bs-backdrop="static" data-bs-keyboard="false">
+  <div class="modal-dialog modal-lg" role="document">
     <app-date-modal [selectedDate]="selectedDate" [relatedEvents]="relatedEvents"></app-date-modal>
   </div>
 </div>
