--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -19,8 +19,7 @@ object-position: bottom;">
           <img [src]="image" class="img-circle" alt="User Image">
         </div>
         <div class="info pt-2">
-          <a href="#" class="d-block">{{ user?.nickname }}</a>
-          
+          <a class="d-block">{{ user?.nickname }}</a>
         </div>
       </div>
 
