--- a/src/app/pages/calendario/index/date-modal/date-modal.component.html
+++ b/src/app/pages/calendario/index/date-modal/date-modal.component.html
@@ -12,7 +12,7 @@
         <div *ngFor="let event of relatedEvents">
           <div class="mt-2">
             <a class="btn btn-flat border-0 border-bottom btn-block text-left" data-toggle="collapse" [attr.href]="'#collapseExample-' + event.calendario.id" role="button" aria-expanded="false" [attr.aria-controls]="'collapseExample-' + event.calendario.paciente?.pacientable_id">
-              <h5 class="text-secondary"><i [style.color]="getEventColor(event)" class="fas fa-calendar"></i> {{event.calendario.tipo}} - {{ event.calendario.paciente?.pacientable?.nombre }} {{ event.calendario.paciente?.pacientable?.paterno }}</h5>
+              <h5 class="text-secondary"><i [style.color]="getEventColor(event)" class="fas fa-calendar"></i> {{event.calendario.tipo}} - {{ event.calendario.paciente?.pacientable?.nombre }}</h5>
             </a>
             <div class="collapse mt-2" [attr.id]="'collapseExample-' + event.calendario.id">
               <div>
@@ -26,8 +26,8 @@
                     </a>
                   </li>
                   <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Hora:</p> {{ event.calendario.fecha | date: 'h:mm a' }}</li>
-                  <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Paciente:</p> <a>{{ event.calendario.paciente.pacientable?.nombre }} {{ event.calendario.paciente.pacientable?.paterno }} {{ event.calendario.paciente.pacientable?.materno }}</a></li>
-                  <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Profesional:</p> {{ event.calendario.profesional?.nombre }} {{ event.calendario.profesional?.paterno }} {{ event.calendario.profesional?.materno }}</li>
+                  <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Paciente:</p> <a>{{ event.calendario.paciente.pacientable?.nombre }}</a></li>
+                  <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Profesional:</p> {{ event.calendario.profesional?.nombre }}</li>
                   <li class="list-group-item border-0 bg-light"><p class="font-weight-bold mb-1">Motivo:</p> {{ event.calendario.motivo }} <br></li>
                   <li class="list-group-item border-0 bg-light text-center">
                     <button class="btn btn-sm btn-pink" id="iniciarConsulta" (click)="iniciarConsulta(event.calendario.id)">
@@ -84,6 +84,7 @@
             <select class="form-control" [(ngModel)]="pacientable_type" name="pacientable_id" (ngModelChange)="cambiarTipoPaciente()">
                 <option value="Empleado" selected>Empleado</option>
                 <option value="Externo">Externo</option>
+                <option value="Dependiente">Dependiente</option>
             </select>
           </div>
           <div class="form-group" *ngIf="pacientable_type">
