--- a/src/app/pages/consultas/create/create.component.html
+++ b/src/app/pages/consultas/create/create.component.html
@@ -32,14 +32,14 @@
         <div class="card">
             <div class="card-header bg-pink1">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-12 col-md-6">
                         <p class="font-weight-bold mb-1">Profesional asignado</p>
                         <div>
                             <img [src]="imageProfesional" alt="Product 1" class="img-circle img-size-32 mr-2 mb-1">
                             {{ profesional?.nickname }}
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-12 col-md-6">
                         <div class="align-items-center d-flex justify-content-around w-100 h-100">
                             <span><i class="fas fa-circle fa-xs px-1"></i><b>Fecha:</b>{{ fechaActual | date: 'dd/MM/yyyy' }}</span>
                             <span><i class="fas fa-circle fa-xs px-1"></i><b>Hora:</b>{{ horaActual }}</span>
@@ -60,6 +60,7 @@
                                 <select class="form-control" formControlName="tipoPaciente" (ngModelChange)="cambiarTipoPaciente()">
                                     <option value="Empleado" selected>Empleado</option>
                                     <option value="Externo">Externo</option>
+                                    <option value="Dependiente">Dependiente</option>
                                 </select>
                             </div>
                         </div>
@@ -87,7 +88,7 @@
                                       width="150">
                                     <div class="mt-3 text-center">
                                         <h4>
-                                            {{ paciente?.pacientable?.nombre }} {{ paciente?.pacientable?.paterno}} {{ paciente?.pacientable?.materno}}
+                                            {{ nombre }}
                                         </h4>
                                         <span class="badge badge-info">
                                             {{tipoPaciente}}
@@ -272,6 +273,11 @@
                                 </label>
                                 <ckeditor [editor]="Editor" [config]="editorConfig" id="diagnostico" formControlName="diagnostico"></ckeditor>
                             </div>
+                            <!-- <div>
+                                <ngx-select [items]="inventarios" formControlName="iventario" (ngModelChange)="cargarInsumos($event)">
+                                    <ng-content select="value"></ng-content>
+                                </ngx-select>
+                            </div> -->
                             <div class="form-group">
                                 <label class="col-form-label">
                                     Receta
