--- a/src/app/pages/consultas/index/index.component.html
+++ b/src/app/pages/consultas/index/index.component.html
@@ -30,7 +30,7 @@
                     <tr>
                         <td>
                             <!-- <img src="../assets/dist/img/user2-160x160.jpg" alt="Product 1" class="img-circle img-size-32 mr-2"> -->
-                            {{ consulta.pacientable?.nombre }} {{ consulta.pacientable?.paterno }}
+                            {{ consulta.pacientable?.nombre }}
                         </td>
                         <td>
                             {{ consulta.fecha | date:'dd/MM/yyyy' }}
