--- a/src/app/pages/historiales-medicos/index/index.component.html
+++ b/src/app/pages/historiales-medicos/index/index.component.html
@@ -39,10 +39,11 @@
                         <tr *ngFor="let historial of historialesMedicos | paginate: {itemsPerPage: elementosPorPagina, currentPage: paginaActual}">
                             <td>
                                 <!-- <img src="../assets/dist/img/user2-160x160.jpg" alt="Product 1" class="img-circle img-size-32 mr-2"> -->
-                                {{ historial.pacientable?.nombre }} {{ historial.pacientable?.paterno }}
+                                {{ historial.pacientable?.nombre }}
                             </td>
                             <td [ngSwitch]="historial.pacientable_type" class="text-center">
                                 (<small *ngSwitchCase="'App\\Models\\NomEmpleado'">Empleado</small>
+                                <small *ngSwitchCase="'App\\Models\\RHDependiente'">Dependiente</small>
                                 <small *ngSwitchCase="'App\\Models\\Externo'">Externo</small>)
                             </td>
                             <td width="10px">
@@ -56,7 +57,7 @@
                                 </button>
                             </td>
                             <td width="10px">
-                                <button href="#" class="btn btn-sm btn-danger">
+                                <button (click)="destroyHistorialMedico(historial.id)" href="#" class="btn btn-sm btn-danger">
                                     <i class="fas fa-trash"></i>
                                 </button>
                             </td>
